cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_151.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ecb_enc.c:46: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ecb_enc.c:46:5: Write of unused value
44.       l2c(l, out);
45.       l = ll[1];
46.       l2c(l, out);
          ^
47.       l = ll[0] = ll[1] = 0;
48.   }
